changed around a lot of stuff, got the timers working finally! Changed the answers in the array of objects to letters to more easily display the correct answer and have it correlate to whats on the screen. Added gifs that display when the user gets the answer right or wrong and my final score function now displays the amount of answers the user got right or wrong. Finally, I added a song in a seperate container that can be played while taking the quiz.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,9 @@ body {
     background-size: cover;
 }
 
+.container1{
+    text-align: center;
+}
 .container{
     background-color: blueviolet;
     color: white;
@@ -19,6 +22,11 @@ body {
     margin-top: 25px;
 
     
+}
+
+
+#timer-display {
+    color: crimson;
 }
 
 #question-box {
